--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,25 @@
 			<classifier>no_aop</classifier>
 			<scope>compile</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 			<groupId>com.jayway.restassured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+			<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+   			 <groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20180813</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+    	<groupId>commons-io</groupId>
+   		 <artifactId>commons-io</artifactId>
+   		 <version>2.6</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
