--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.11.1</version>
+</dependency>
+		<dependency>
 			<groupId>com.jayway.restassured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>2.4.1</version>
