--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,19 @@
 			<artifactId>rest-assured</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+		
 	</dependencies>
 	<build>
 		<plugins>
