--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>E2ETrainingExercise</name>
 	<description>E2E Training Exercise</description>
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>13</maven.compiler.source>
+		<maven.compiler.target>13</maven.compiler.target>
+		<skipExec>true</skipExec>
+	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
@@ -39,6 +44,16 @@
 			<groupId>com.jayway.restassured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+  			<artifactId>javax.json</artifactId>
+  			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.skyscreamer</groupId>
+    		<artifactId>jsonassert</artifactId>
+    		<version>1.5.0</version>
 		</dependency>
 	</dependencies>
 	<build>
