code cahnges done as per requirment

--- a/pathfile.properties
+++ b/pathfile.properties
@@ -1,1 +1,1 @@
-filePath=/Users/sds-shahul.h01/e2e-exercise/src/main/resourse/mytext.txt
+filePath=/Users/sds-shahul.h01/e2e-exercise/src/main/resourse/mytext.json
