--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,21 @@
 			<artifactId>rest-assured</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.3</version>
+		</dependency>
 			<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
    			 <groupId>org.json</groupId>
     		<artifactId>json</artifactId>
     		<version>20180813</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
