--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.9.0.pr2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.3.6</version>
+</dependency>
+<dependency>
+	<groupId>org.codehaus.groovy</groupId>
+	<artifactId>groovy</artifactId>
+	<version>3.0.0-alpha-4</version>
+</dependency>
 <dependency>
     <groupId>org.skyscreamer</groupId>
     <artifactId>jsonassert</artifactId>
@@ -55,6 +66,26 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured-common</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>xml-path</artifactId>
+            <version>4.1.1</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
